Fixed orientation landscape on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -229,13 +229,12 @@ footer i {
 /* media queries */
 
 
-@media screen and (orientation:landscape)
-    and (min-width: 1284px) {
+@media (min-width: 1284px), screen and (orientation:landscape) {
     html,
     body {
         font-size: 16px;
     }
-
+    
     .content-feed,
     .recent-posts {
         display: grid;
